# c_study_code

./: CMakeLists.txt  encrypt.c
Process/: coffe  coffe.c  download.php  file.c  fork  fork.c  getIp  getIp.c  test_coffe  test_coffe.c
dataType/: getMinAndMaxVal  getMinAndMaxVal.c  intToFloat  intToFloat.c  intToShort  intToShort.c
demo/: HelloWorld.c  changeVal.c  error.c  fgets.c  gdbtest  getArrVal.c  getPoint.c  getValByPoint.c  helloworld  scanf.c  strArgFun.c  strstr.c
demo/gdbtest.dSYM/Contents/Resources/DWARF/: gdbtest
demo/helloworld.dSYM/Contents/Resources/DWARF/: helloworld
file/: file.c  spooky.csv
highFunc/: arr_func  arr_func.c  find.c  find1.c  func  func.c  print_ints  print_ints.c  qsort.c
list/: create.c  createByMalloc  createByMalloc.c  createByMalloc2  createByMalloc2.c
list/createByMalloc.dSYM/Contents/: Info.plist
list/createByMalloc.dSYM/Contents/Resources/DWARF/: createByMalloc
list/createByMalloc2.dSYM/Contents/: Info.plist
list/createByMalloc2.dSYM/Contents/Resources/DWARF/: createByMalloc2
make/: compileError.c  defineFunction.c  defineFunctionc.c  demo.h
make/shareCode/: db  db.c  encrypt.c
simpleTool/: filterSimpleTool.c  input.csv  simpleTool.c
statement/: for.c  if.c  switch.c  while.c
staticLibrary/: checksum.c  encrypt.c  test  test.c
staticLibrary/myHeader/: hfcal.h
staticLibrary/myObject/: elliptical  libhfcal.dylib
staticLibrary/treadmill/: elliptical.c  hfcal.c
struct/: fish.c  fishAndFood.c  typedef.c  upStruct.c  upStruct1  upStruct1.c
union/: enum  enum.c  union  union.c  unionAndStruct  unionAndStruct.c
unistd/: unistd.c
